New SysEx command to save current config in EEPROM

--- a/midi-octopot/Makefile
+++ b/midi-octopot/Makefile
@@ -1,6 +1,6 @@
 BOARD_TAG    = leonardo
 MONITOR_PORT = /dev/ttyACM0
-ARDUINO_LIBS = MIDIUSB MIDI_Library USB-MIDI
+ARDUINO_LIBS = MIDIUSB MIDI_Library USB-MIDI EEPROM
 
 # Workaround for MIDIUSB with 1.8.19: 1819 < 10606 (1.6.6)
 ARDUINO_VERSION = 10819
