--- a/midi-octopot/Makefile
+++ b/midi-octopot/Makefile
@@ -1,5 +1,4 @@
-BOARD_TAG    = leonardo
-MONITOR_PORT = /dev/ttyACM0
+BOARD_TAG    = micro
 ARDUINO_LIBS = MIDIUSB MIDI_Library USB-MIDI EEPROM
 
 # Workaround for MIDIUSB with 1.8.19: 1819 < 10606 (1.6.6)
