--- a/midi-octopot/Makefile
+++ b/midi-octopot/Makefile
@@ -4,4 +4,6 @@ ARDUINO_LIBS = MIDIUSB MIDI_Library USB-MIDI EEPROM
 # Workaround for MIDIUSB with 1.8.19: 1819 < 10606 (1.6.6)
 ARDUINO_VERSION = 10819
 
+CPPFLAGS = -DUSB_PRODUCT='"Octopot"'
+
 include /usr/share/arduino/Arduino.mk
