Use Control-Surface framework

--- a/midi-octopot/Makefile
+++ b/midi-octopot/Makefile
@@ -1,5 +1,9 @@
 BOARD_TAG    = micro
-ARDUINO_LIBS = MIDIUSB MIDI_Library USB-MIDI EEPROM
+
+# Platform libs
+ARDUINO_LIBS = SPI EEPROM
+# User libs
+ARDUINO_LIBS+= Control-Surface MIDIUSB
 
 # Workaround for MIDIUSB with 1.8.19: 1819 < 10606 (1.6.6)
 ARDUINO_VERSION = 10819
